--- a/playground.ipynb
+++ b/playground.ipynb
@@ -351,9 +351,10 @@
     "        print(f\"An error occurred: {e}\")\n",
     "    except Exception as e:\n",
     "        print(f\"Unexpected error: {e}\")\n",
+    "    return json.response()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    fetch_data()\n"
+    "    data = fetch_data()\n"
    ]
   },
   {
@@ -381,7 +382,7 @@
    "source": [
     "from collections import defaultdict\n",
     "import json\n",
-    "data = results\n",
+    "data\n",
     "\n",
     "# Grouping by secretariatWard\n",
     "grouped_data = defaultdict(lambda: {\"count\": 0, \"totalAmount\": 0, \"owners\": []})\n",
